fixed collapse issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,61 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.top-pane{
-    background-color: rgb(29, 37, 44);
+.top-pane {
+  background-color: rgb(16, 23, 36);
 }
 
 .pane {
-    height: 50vh;
-    display: flex;
+  height: 50vh;
+  display: flex;
 }
 
-.editor-container{
-    flex-basis: 0;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    background-color: rgb(29, 37, 44);
+.editor-container {
+  flex-grow: 1;
+  flex-basis: 0;
+  display: flex;
+  flex-direction: column;
+  padding: .5rem;
+  background-color: rgb(12, 21, 37);
 }
 
-.editor-container.collapsed{
-    flex-grow: 0;
-}
-.editor-container.collapsed{
-    position: absolute;
-    overflow: hidden !important;
+.editor-container.collapsed {
+  flex-grow: 0;
 }
 
-.expand-collapse-btn{
-    margin-left: .5rem;
-    background: none;
-    border: none;
-    color: rgb(217, 232, 245);
-    cursor: pointer;
+.editor-container.collapsed .CodeMirror-scroll {
+  position: absolute;
+  overflow: hidden !important;
 }
 
-.editor-title{
-    display: flex;
-    background-color: rgb(22, 29, 34);
-    justify-content: space-between;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 700;
-    color: rgb(217, 232, 245);
-    padding: .5rem .5rem .5rem 1rem;
-    border-top-right-radius: .5rem;
-    border-top-left-radius: .5rem;
+.expand-collapse-btn {
+  margin-left: .5rem;
+  background: none;
+  border: none;
+  color: rgb(225, 239, 250);
+  cursor: pointer;
 }
 
-.CodeMirror{
-    height: 100% !important;
+.editor-title {
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(9, 16, 27);
+  color: rgb(225, 239, 250);
+  padding: .5rem .5rem .5rem 1rem;
+  border-top-right-radius: .5rem;
+  border-top-left-radius: .5rem;
+}
+
+.CodeMirror {
+  height: 100% !important;
 }
 
 .code-mirror-wrapper {
-    flex-grow: 1;
-    border-bottom-right-radius: .5rem;
-    border-bottom-left-radius: .5rem;
-    overflow: hidden;
+  flex-grow: 1;
+  border-bottom-right-radius: .5rem;
+  border-bottom-left-radius: .5rem;
+  overflow: hidden;
 }
